# Project_Jango_1

./: .gitignore  populate_db.py  pyproject.toml
barbershop/: settings.py  urls.py
core/: admin.py  context_processors.py  data.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_master_alter_order_phone.py  0002_remove_order_date_order_date_created_and_more.py  0003_order_master.py  0003_order_services_2.py  0004_alter_master_photo.py  0004_rename_services_2_order_services_22.py  0005_alter_order_master.py  0006_service_master_services.py  0007_alter_service_options_alter_master_photo_and_more.py  0008_alter_master_options_alter_order_options_and_more.py  0008_alter_order_options_order_status_idx_and_more.py  0009_order_services.py  0010_auto_20250617_1408.py  0011_auto_20250617_1421.py  0012_merge_0010_auto_20250617_1408_0011_auto_20250617_1421.py  0013_alter_master_first_name_alter_master_phone_and_more.py  0013_review.py  0014_alter_review_date_created.py  0014_master_view_count.py  0015_alter_service_duration.py  0015_fix_review_date_created.py
core/templates/core/: employee_card.html  landing.html  order_card_include.html  order_detail.html  orders_list.html  thanks.html
core/templatetags/: price_extras.py
static/css/: main.css  test.css
static/js/: main.js  order_detail.js  test.js
templates/: base.html  landing.html  nav_menu_include.html  test.html  thanks.html
templates/includes/: order_card.html
